- Endpoint::router() for nesting router files inside the main router.
- Auto-trailing slashes for request and endpoint paths.
- Request::getType() for getting request type.
- Router::add(...) for adding endpoints and subrouters.
- Bee::buildProjectPath() for building dynamic and true sanitized paths inside a site project.
- ProjectFolderType enum for specifying project folder types.

#### Changed
- DataSlave now uses regex filtering for injected strings (table, cols, conditions and orderBy).
- Request now sanitizes data in different levels of severity.
- MailSlave::getMailTemplate() now uses realpath() to prevent directory traversal attacks.
- MailSlave::setMailerAttachments() now uses realpath() to prevent directory traversal attacks.
- Type enums have been relocated to a new namespace.
- Skeleton has been updated to account for recent changes.
- Template component now allows for nested setters.
- DataType enum now supports 55 data types.
- Router factory now only specifies middleware type. 
- Router now uses O(1) hash map lookup for endpoint matching.
- Collection now stores values internally with key-based O(1) lookup.
- AuthSlave now calls session_start() only when needed, improving performance.
- DataSlave now supports persistent PDO connections for better performance.
- Types now live inside a new namespace. \FastRaven\Types
- Template:flex now supports fragments.

#### Fixed
- Logs are not being stored inside storage directory.
- AuthWorker::autologin() produces a timing attack vulnerability.

#### Removed
- sitePath parameter from Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() 
- getDataItem() method from Request component is getting deprecated.
- getOriginInfo() method from Request component.
- Permissions-Policy meta tag from main.php template.
- initializeServer() method from Server class.
- preload(...) method from Server class.
- isApi() method from Request component.